Fixed #36920 -- Fixed alignment of fieldset legends in wide admin forms.
Visual regression in 4187da258fe212d494cb578a0bc2b52c4979ab95.

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -218,7 +218,8 @@ fieldset .fieldBox {
 
 /* WIDE FIELDSETS */
 
-.wide label {
+.wide label,
+.wide legend {
     width: 200px;
 }
 
